k8s/base/frontend.yaml
# 1. Creating Service for Frontend (outside access)
# ==============================================================================
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort # Warning! access outside cluster (from WSL)
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080  # Hardcore port(30000-32767)

---
# ==============================================================================
# 2. Creating Deployment for Frontend
# ==============================================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: nginx:alpine
          ports:
            - containerPort: 80
